--- a/examples/CLI/CMakeLists.txt
+++ b/examples/CLI/CMakeLists.txt
@@ -11,7 +11,7 @@ if(EMSCRIPTEN)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -matomics -mbulk-memory")
     
    # Set the output file
-   add_executable(${JS_FILE} main.cpp cli.cpp)
+   add_executable(${EXE_NAME} main.cpp cli.cpp)
 
    set_target_properties(${JS_FILE} PROPERTIES SUFFIX ".js" LINK_FLAGS "-lembind")
    target_link_options(${JS_FILE} PRIVATE --emit-tsd "$<TARGET_FILE_DIR:${JS_FILE}>/${JS_FILE}.d.ts")
@@ -23,6 +23,7 @@ if(EMSCRIPTEN)
         target_link_options(${JS_FILE} PRIVATE "SHELL:-O3")
    else()
         target_link_options(${JS_FILE} PRIVATE "SHELL:-s STACK_OVERFLOW_CHECK=2 -s ASSERTIONS=2")
+        target_compile_definitions(${JS_FILE} PRIVATE MAZE_DEBUG)
    endif()
 
 else()
@@ -32,4 +33,7 @@ else()
     target_compile_features(${EXE_NAME} PRIVATE cxx_std_17)
     target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
 
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        target_compile_definitions(${EXE_NAME} PRIVATE MAZE_DEBUG)
+   endif()
 endif()
