--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,12 +35,12 @@ if(MAZE_BUILDER_EXAMPLES)
         include(FetchGitRepo)
 
         # Get box2d
-        #FetchGitRepo(box2d https://github.com/erincatto/box2d.git v3.1.0)
+        FetchGitRepo(box2d https://github.com/erincatto/box2d.git v3.1.1)
         # Add Box2D include directory if not already included by find_package
-        #if(TARGET box2d)
-        #    set_property(TARGET box2d PROPERTY COMPILE_WARNING_AS_ERROR OFF)
-        #    get_target_property(BOX2D_INCLUDE_DIRS box2d INTERFACE_INCLUDE_DIRECTORIES)
-        #endif()
+        if(TARGET box2d)
+            set_property(TARGET box2d PROPERTY COMPILE_WARNING_AS_ERROR OFF)
+            get_target_property(BOX2D_INCLUDE_DIRS box2d INTERFACE_INCLUDE_DIRECTORIES)
+        endif()
 
         # Get SDL
         set(SDL_SHARED FALSE CACHE BOOL "Build a SDL shared library (if available)")
@@ -64,17 +64,17 @@ if(MAZE_BUILDER_EXAMPLES)
         include(FetchGitRepo)
 
         # Add Box2D dependency
-        #find_package(box2d QUIET)
-        #if(NOT box2d_FOUND)
-        #    message(INFO ": Getting Box2D via FetchContent")
-        #    FetchGitRepo(box2d https://github.com/erincatto/box2d.git v3.1.0)
-        #endif()
+        find_package(box2d QUIET)
+        if(NOT box2d_FOUND)
+            message(INFO ": Getting Box2D via FetchContent")
+            FetchGitRepo(box2d https://github.com/erincatto/box2d.git v3.1.1)
+        endif()
 
         # Add Box2D include directory if not already included by find_package
-        #if(TARGET box2d)
-        #    set_property(TARGET box2d PROPERTY COMPILE_WARNING_AS_ERROR OFF)
-        #    get_target_property(BOX2D_INCLUDE_DIRS box2d INTERFACE_INCLUDE_DIRECTORIES)
-        #endif()
+        if(TARGET box2d)
+            set_property(TARGET box2d PROPERTY COMPILE_WARNING_AS_ERROR OFF)
+            get_target_property(BOX2D_INCLUDE_DIRS box2d INTERFACE_INCLUDE_DIRECTORIES)
+        endif()
 
         # Get SDL
         find_package(SDL3 QUIET)
@@ -100,6 +100,5 @@ if(MAZE_BUILDER_EXAMPLES)
     add_subdirectory(Voxels)
     add_subdirectory(CLI)
     add_subdirectory(Http)
-    # @TODO Recommit Physics examples when box2d is next released
-	#add_subdirectory(Physics)
+	add_subdirectory(Physics)
 endif()
