--- a/examples/CLI/CMakeLists.txt
+++ b/examples/CLI/CMakeLists.txt
@@ -2,6 +2,13 @@
 
 # Set the name of the executable
 set(EXE_NAME "mazebuildercli")
+
+set(CLI_SOURCES
+    main.cpp
+    cli.cpp
+    batch_processor.cpp
+)
+
 if(EMSCRIPTEN)
 
    message(INFO ": Building ${EXE_NAME} for the Web!")
@@ -10,7 +17,7 @@ if(EMSCRIPTEN)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -matomics -mbulk-memory")
     
    # Set the output file
-   add_executable(${EXE_NAME} main.cpp cli.cpp)
+   add_executable(${EXE_NAME} ${CLI_SOURCES})
 
    set_target_properties(${EXE_NAME} PROPERTIES SUFFIX ".js" LINK_FLAGS "-lembind")
    target_link_options(${EXE_NAME} PRIVATE --emit-tsd "$<TARGET_FILE_DIR:${EXE_NAME}>/${EXE_NAME}.d.ts")
@@ -27,7 +34,7 @@ if(EMSCRIPTEN)
 
 else()
     message(INFO ": Building ${EXE_NAME} for the Desktop!")
-    add_executable(${EXE_NAME} main.cpp cli.cpp)
+    add_executable(${EXE_NAME} ${CLI_SOURCES})
     target_link_libraries(${EXE_NAME} ${MAZE_BUILDER_CORE_LIB}_static)
     target_compile_features(${EXE_NAME} PRIVATE cxx_std_17)
     target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
@@ -35,4 +42,6 @@ else()
     if(CMAKE_BUILD_TYPE STREQUAL "Debug")
         target_compile_definitions(${EXE_NAME} PRIVATE MAZE_DEBUG)
    endif()
+
+   file(COPY "${CMAKE_SOURCE_DIR}/tests/mazes_array.json" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 endif()
