--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -32,4 +32,8 @@ if(MAZE_BUILDER_MEMCHECK)
 	AddValgrind(${MAZE_BUILDER_TESTS_EXE})
 	include(Memcheck)
 	AddMemcheck(${MAZE_BUILDER_TESTS_EXE})
+else()
+    set(MAZE_BUILDER_BENCHMARKS_DEF "MAZE_BENCHMARK")
+    message(INFO ": Running benchmarks with ${MAZE_BUILDER_BENCHMARKS_DEF} defined")
+    target_compile_definitions(${MAZE_BUILDER_TESTS_EXE} PRIVATE ${MAZE_BUILDER_BENCHMARKS_DEF})
 endif()
