--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -78,7 +78,7 @@ file(GLOB MAZE_BUILDER_HEADERS "${CMAKE_SOURCE_DIR}/include/MazeBuilder/*.h")
 target_include_directories(${MAZE_BUILDER_LIB_OUT}_obj PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
 set_target_properties(${MAZE_BUILDER_LIB_OUT}_obj PROPERTIES POSITION_INDEPENDENT_CODE 1)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     set(MAZE_BUILDER_DEBUG_OPTION "MAZE_DEBUG")
     message(INFO ": ${PROJECT_NAME} - ${CMAKE_BUILD_TYPE} enabled to use ${MAZE_BUILDER_DEBUG_OPTION} definition.")
     target_compile_definitions(${MAZE_BUILDER_LIB_OUT}_obj PRIVATE ${MAZE_BUILDER_DEBUG_OPTION})
