refactor args tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,7 +24,7 @@ target_link_libraries(${MAZE_BUILDER_TESTS_EXE} PRIVATE ${MAZE_BUILDER_CORE_LIB}
 target_include_directories(${MAZE_BUILDER_TESTS_EXE} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../deps")
 target_include_directories(${MAZE_BUILDER_TESTS_EXE} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../include")
 
-file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/mazes_array.json" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/array.json" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 if(MAZE_BUILDER_MEMCHECK)
 	message(INFO ": Applying memcheck to target ${MAZE_BUILDER_TESTS_EXE}")
