add generator expressions to cmake files

--- a/examples/Http/CMakeLists.txt
+++ b/examples/Http/CMakeLists.txt
@@ -3,12 +3,14 @@ set(HTTP_EXE "mazebuilderhttp")
 if(EMSCRIPTEN)
 
 else()
+
     message(INFO ": Building ${HTTP_EXE} for the Desktop!")
     add_executable(${HTTP_EXE} main.cpp)
     target_link_libraries(${HTTP_EXE} PRIVATE ${MAZE_BUILDER_CORE_LIB}_static SFML::Network)
-    target_include_directories(${HTTP_EXE} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
-    target_include_directories(${HTTP_EXE} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../deps)
     target_compile_features(${HTTP_EXE} PRIVATE cxx_std_17)
+    target_include_directories(${HTTP_EXE} PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
+    target_include_directories(${HTTP_EXE} PUBLIC $<INSTALL_INTERFACE:deps> $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/deps>)
+    target_compile_definitions(${HTTP_EXE} PRIVATE "$<$<OR:$<STREQUAL:$<CONFIG>,Debug>,$<STREQUAL:$<CONFIG>,RelWithDebInfo>>:MAZE_DEBUG>")
 	
 	# Copy shared/dlls on Windows only
 	if(WIN32)
