--- a/cmake/buildinfo.h.in
+++ b/cmake/buildinfo.h.in
@@ -3,13 +3,17 @@
 
 #include <string>
 
-namespace mazes {
+namespace mazes 
+{
 
-struct build_info {
-    static inline const std::string CommitSHA = "@COMMIT_SHA@";
-    static inline const std::string Timestamp = "@TIMESTAMP@";
-    static inline const std::string Version = "@PROJECT_VERSION@";
-};
+    struct build_info
+    {
+        static inline const std::string CommitSHA = "@COMMIT_SHA@";
+
+        static inline const std::string Timestamp = "@TIMESTAMP@";
+        
+        static inline const std::string Version = "@PROJECT_VERSION@";
+    };
 
 }
 
