--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -21,6 +21,7 @@ set(MAZE_BUILDER_CORE_SRCS
     distances.cpp
     grid.cpp
     grid_factory.cpp
+    grid_range.cpp
     io_utils.cpp
     json_helper.cpp
     lab.cpp
