--- a/cmake/buildinfo.h.in
+++ b/cmake/buildinfo.h.in
@@ -3,10 +3,13 @@
 
 #include <string>
 
-namespace mazes 
+/// @file buildinfo.h
+/// @brief Build information for the maze generation library
+/// @namespace mazes
+namespace mazes
 {
-
-    struct build_info
+    /// @brief Build information for the maze generation library
+    struct buildinfo
     {
         static inline const std::string CommitSHA = "@COMMIT_SHA@";
 
