add utility classes to Voxels example

--- a/examples/Voxels/CMakeLists.txt
+++ b/examples/Voxels/CMakeLists.txt
@@ -3,17 +3,21 @@ set(NOISE_SOURCES ${CMAKE_SOURCE_DIR}/deps/noise/noise.c)
 set(SQLITE3_SOURCES ${CMAKE_SOURCE_DIR}/deps/sqlite/sqlite3.c)
 
 set(CRAFT_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/bloom_effects.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/chunk_manager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/craft.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/craft_utils.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/cube.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/db.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/event_handler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/item.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/map.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/matrix.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ring.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/sign.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/craft_utils.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/world.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/world.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/world_manager.cpp)
 
 set(VOXELS_EXE "mazebuildervoxels")
 
