refactor HTTP example

--- a/examples/Http/CMakeLists.txt
+++ b/examples/Http/CMakeLists.txt
@@ -1,11 +1,16 @@
 # Set the name of the executable
 set(HTTP_EXE "mazebuilderhttp")
+
+set(HTTP_SOURCES
+    http_client.cpp
+    main.cpp
+    terminal_gui.cpp)
+
 if(EMSCRIPTEN)
 
 else()
-
     message(INFO ": Building ${HTTP_EXE} for the Desktop!")
-    add_executable(${HTTP_EXE} main.cpp)
+    add_executable(${HTTP_EXE} ${HTTP_SOURCES})
     target_link_libraries(${HTTP_EXE} PRIVATE ${MAZE_BUILDER_CORE_LIB}_static SFML::Network)
     target_compile_features(${HTTP_EXE} PRIVATE cxx_std_17)
     target_include_directories(${HTTP_EXE} PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
